<resources>
    <string name="app_name">GameCentre</string>
    <string name="slidingTilesGame">slidingTiles</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="slidingTileGame_name">Sliding Tiles</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="UserName">hello</string>
    <string name="load_game">Load Game</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="slidingTiles_description">Welcome To Sliding Tiles \n A Puzzle Game where you must arrange the tiles in the correct order</string>
    <string name="sudoku_description">Welcome To Sudoku \n The objective is to fill a 9×9 grid with digits so that each column, each row, and each of the nine 3×3 subgrids contains all of the digits from 1 to 9.</string>
    <string name="picturematching_description">Welcome To Picture Match \n Click on the different cards to find pairs of matching pictures.</string>
    <string name="select_game_difficulty">Select Game Difficulty</string>
    <string name="undo_limit">Undo Limit</string>
    <string name="with_number">With Number</string>
    <string name="with_image">With Image</string>
    <string name="new_game">New Game</string>
    <string name="import_your_image_here">import your image here:</string>
</resources>
